[gd_scene load_steps=18 format=2]

[ext_resource path="res://scripts/Characters/States/Passive.gd" type="Script" id=1]
[ext_resource path="res://scripts/Characters/States/Zombie.gd" type="Script" id=2]
[ext_resource path="res://scripts/Characters/States/StateMachine.gd" type="Script" id=3]
[ext_resource path="res://materials/Human.tres" type="Material" id=4]
[ext_resource path="res://materials/Zombie.tres" type="Material" id=5]
[ext_resource path="res://scripts/Dead.gd" type="Script" id=6]
[ext_resource path="res://scripts/Characters/States/Aggressive.gd" type="Script" id=7]
[ext_resource path="res://scripts/effects/BloodSplashEmitter.gd" type="Script" id=8]
[ext_resource path="res://materials/Zombie_Dead.tres" type="Material" id=9]
[ext_resource path="res://scripts/effects/CharacterSoundController.gd" type="Script" id=10]

[sub_resource type="CubeMesh" id=1]
resource_local_to_scene = true
material = ExtResource( 4 )

[sub_resource type="Skin" id=2]

[sub_resource type="BoxShape" id=3]

[sub_resource type="SphereShape" id=4]

[sub_resource type="Animation" id=5]
tracks/0/type = "value"
tracks/0/path = NodePath("Skin:transform")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, 0 ), Transform( 0.5, 0, 0, 0, 1, 0, 0, 0, 0.5, 0, 0, 0 ), Transform( 3.5, 0, 0, 0, 3.5, 0, 0, 0, 3.5, 0, 0, 0 ), Transform( 2.113, 0, 0, 0, 2.113, 0, 0, 0, 2.113, 0, 0, 0 ), Transform( 2, 0, 0, 0, 1.774, 0, 0, 0, 2, 0, 0, 0 ), Transform( 2, 0, 0, 0, 2.098, 0, 0, 0, 2, 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "Death"
tracks/0/type = "value"
tracks/0/path = NodePath("Skin:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 20, 0 ), Vector3( 0, 180, 0 ), Vector3( 0, 270, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Skin:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 2, 1.5, 2 ), Vector3( 1, 1, 1 ), Vector3( 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=6]
tracks/0/type = "value"
tracks/0/path = NodePath("Skin:transform")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, 0 ), Transform( 2, 0, 0, 0, 1.623, 0, 0, 0, 2, 0, 0, 0 ), Transform( 2, 0, 0, 0, 2.715, 0, 0, 0, 2, 0, 0, 0 ), Transform( 2, 0, 0, 0, 2.113, 0, 0, 0, 2, 0, 0, 0 ), Transform( 2, 0, 0, 0, 1.774, 0, 0, 0, 2, 0, 0, 0 ), Transform( 2, 0, 0, 0, 2.098, 0, 0, 0, 2, 0, 0, 0 ) ]
}

[node name="BaseCharacter" type="RigidBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4.61918, 0 )
mass = 1.22449
script = ExtResource( 3 )

[node name="Skin" type="MeshInstance" parent="."]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, 0 )
mesh = SubResource( 1 )
skin = SubResource( 2 )
material/0 = null

[node name="States" type="Node" parent="."]

[node name="Passive" type="Node" parent="States"]
script = ExtResource( 1 )
start_skin = ExtResource( 4 )
zombie_skin = ExtResource( 5 )

[node name="Zombie" type="Node" parent="States"]
script = ExtResource( 2 )
skin = ExtResource( 5 )
dead_skin = ExtResource( 9 )

[node name="Aggressive" type="Node" parent="States"]
script = ExtResource( 7 )
start_skin = ExtResource( 4 )
zombie_skin = ExtResource( 5 )

[node name="Dead" type="Node" parent="States"]
script = ExtResource( 6 )
dead_skin = ExtResource( 9 )

[node name="RigidBody" type="CollisionShape" parent="."]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, 0 )
shape = SubResource( 3 )

[node name="InfectionRadius" type="Area" parent="."]
visible = false

[node name="Collision" type="CollisionShape" parent="InfectionRadius"]
transform = Transform( 5, 0, 0, 0, 5, 0, 0, 0, 5, 0, 0, 0 )
shape = SubResource( 4 )

[node name="SightRadius" type="Area" parent="."]
transform = Transform( 8.25834, 0, 0, 0, 8.25834, 0, 0, 0, 8.25834, 0, 0, 0 )
visible = false

[node name="Collision" type="CollisionShape" parent="SightRadius"]
transform = Transform( 5, 0, 0, 0, 5, 0, 0, 0, 5, 0, 0, 0 )
shape = SubResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Bounce = SubResource( 5 )
anims/Death = SubResource( 7 )
"anims/New Anim" = SubResource( 6 )

[node name="Spatial" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0 )
script = ExtResource( 8 )

[node name="SoundEmitter" type="Node" parent="."]
script = ExtResource( 10 )

[connection signal="infected" from="States/Passive" to="SoundEmitter" method="_on_Passive_infected"]
[connection signal="infected" from="States/Passive" to="Spatial" method="_on_Passive_infected"]
[connection signal="infected" from="States/Zombie" to="SoundEmitter" method="_on_Zombie_infected"]
[connection signal="infected" from="States/Zombie" to="Spatial" method="_on_Zombie_infected"]
[connection signal="infected" from="States/Aggressive" to="SoundEmitter" method="_on_Aggressive_infected"]
[connection signal="area_entered" from="InfectionRadius" to="States/Aggressive" method="_on_InfectionRadius_area_entered"]
[connection signal="area_entered" from="InfectionRadius" to="States/Passive" method="_on_InfectionRadius_area_entered"]
[connection signal="area_exited" from="InfectionRadius" to="States/Aggressive" method="_on_InfectionRadius_area_exited"]
[connection signal="area_exited" from="InfectionRadius" to="States/Passive" method="_on_InfectionRadius_area_exited"]
